entity/platform-tooling/vmware/echoserver/echoserver.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
spec:
  ingressClassName: cilium
  rules:
  - host: echoserver.geplaenkel.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 80
  tls:
    - hosts:
      - echoserver.geplaenkel.io
      secretName: echoserver-tls
